how to order section ok

--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,46 @@
 
 
 
+            <!-- ****************************************** -->
+            <!--         How to Order Start  Here          -->
+            <!-- ****************************************** -->
+            <section class="section-margin how-to-order">
+                <div class="my-container">
+                    <div class="howo-to-order-area">
+                        <div class="section-head my-text-center">
+                            <h2>How To Order Product</h2>
+                            <p>Follow some step</p>
+                        </div>
+
+                        <div class="items my-grid-3 my-gap-7 my-mt-6 my-grid-md-2 my-grid-sm-1">
+
+                            <!-- single item -->
+                            <div class="my-card my-flex-column my-gap-4">
+                                <div class="sl">01</div>
+                                <h3 class="my-mt-4">Choose Product</h3>
+                                <p>We have several varieties products you can choosen form.</p>
+                            </div>
+
+                            <!-- single item -->
+                            <div class="my-card my-flex-column my-gap-4">
+                                <div class="sl">02</div>
+                                <h3 class="my-mt-4">Choose Product</h3>
+                                <p>Only your order is set, we move to the next step which is the shipping.</p>
+                            </div>
+
+                            <!-- single item -->
+                            <div class="my-card my-flex-column my-gap-4">
+                                <div class="sl">03</div>
+                                <h3 class="my-mt-4">Get order Delivered</h3>
+                                <p>Our delivary process is very easy. you recive the order direct to your home.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
 
             <!-- ************************************ -->
             <!--         Brands  Start  Here          -->
