--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,60 @@
 
 
 
+
+            <!-- ************************************ -->
+            <!--         About  Start  Here          -->
+            <!-- ************************************ -->
+            <section class="section-margin">
+                <div class="my-container">
+                    <div class="about">
+
+                        <div class="section-head my-text-center">
+                            <h2>Our Achievement</h2>
+                            <p>Explore Achievement </p>
+                        </div>
+
+                        <div class="items my-grid-4 my-grid-md-2 my-gap-6 my-mt-6">
+
+                            <!-- single item -->
+                            <div class="item">
+                                <div class="my-card my-text-center">
+                                    <h3>Total Products</h3>
+                                    <h2 class="my-mt-4 counter" data-target="1040">0 <span>+</span></h2>
+                                </div>
+                            </div>
+
+                            <!-- single item -->
+                            <div class="item">
+                                <div class="my-card my-text-center">
+                                    <h3>Total Sell</h3>
+                                    <h2 class="my-mt-4 counter" data-target="200">0 <span>+</span></h2>
+                                </div>
+                            </div>
+
+                            <!-- single item -->
+                            <div class="item">
+                                <div class="my-card my-text-center">
+                                    <h3>Total Customer</h3>
+                                    <h2 class="my-mt-4 counter" data-target="500">0 <span>+</span></h2>
+                                </div>
+                            </div>
+
+                            <!-- single item -->
+                            <div class="item">
+                                <div class="my-card my-text-center">
+                                    <h3>Total Sell</h3>
+                                    <h2 class="my-mt-4 counter" data-target="2000">0 <span>+</span></h2>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
             <!-- ****************************************** -->
             <!--         How to Order Start  Here          -->
             <!-- ****************************************** -->
@@ -1101,7 +1155,7 @@
                     <h2 class="">Our Brands</h2>
                     <p>We have 20+ brand</p>
                 </div>
-                <div class="my-container aos-init aos-animate" data-aos="flip-down">
+                <div class="my-container aos-init aos-animate my-mt-2">
                     <div class="marquee ">
 
                         <div class="marqueeone ">
@@ -2567,6 +2621,49 @@
         <!-- js -->
         <!-- <script type="module" src="./Static/Js/slider.js"></script> -->
         <script type="module" src="./Static/Js/app.js"></script>
+
+        <script>
+            // Counter animation
+            function animateCounter(counter) {
+                const target = +counter.getAttribute("data-target");
+                const duration = 2000; // Animation duration in milliseconds
+                const steps = 100; // Total number of animation steps
+                const increment = target / steps; // Increment per step
+                let current = 0;
+                const interval = duration / steps; // Time between each increment
+
+                const updateCount = () => {
+                    current += increment;
+                    if (current < target) {
+                        counter.innerText = Math.floor(current); // Update counter text
+                        setTimeout(updateCount, interval);
+                    } else {
+                        counter.innerText = target; // Ensure it ends exactly at the target
+                    }
+                };
+
+                updateCount();
+            }
+
+            // Observer to trigger the counter when visible
+            const counters = document.querySelectorAll(".counter");
+            const observer = new IntersectionObserver(
+                (entries) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            // Reset counter and start animation
+                            entry.target.innerText = "0"; // Reset to 0
+                            animateCounter(entry.target); // Start animation
+                        }
+                    });
+                },
+                { threshold: 0.5 } // Adjust visibility threshold
+            );
+
+            counters.forEach(counter => observer.observe(counter));
+        </script>
+
+
     </body>
 
 </html>
