subcribe section ok

--- a/index.html
+++ b/index.html
@@ -1106,6 +1106,45 @@
 
 
 
+
+
+
+
+
+
+
+            <!-- ****************************************** -->
+            <!--         Subcribe Discount Start  Here      -->
+            <!-- ****************************************** -->
+            <section class="section-margin subcibe-app">
+                <div class="my-container">
+                    <div class="subcibe-discount-area my-flex-between my-gap-4 my-flex-sm-column">
+                        <div class="left my-flex-column my-gap-3">
+                            <h5 class="my-fw-bolder">50 Taka Discount</h5>
+                            <h2>Get top deals, latest trends, and more.</h2>
+                            <p>Join our email subscription now to get updates on promotions and coupons.</p>
+
+                            <form action="#">
+                                <input type=" text" placeholder="Type Email">
+                                <a href="#" class="my-btn my-primary-btn">Sign UP</a>
+                            </form>
+                        </div>
+
+                        <!-- right -->
+                        <div class="right">
+                            <img src="./Static/images/mobile-app-right.png" alt="shoping image">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
+
+
+
+
+
             <!-- ****************************************** -->
             <!--         How to Order Start  Here          -->
             <!-- ****************************************** -->
@@ -1143,6 +1182,15 @@
                     </div>
                 </div>
             </section>
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1931,10 +1979,11 @@
                 <div class="my-container">
                     <div class="footelr-bottom-area my-flex-between my-flex-sm-column my-gap-5">
                         <div class="left">
-                            <p class="my-fw-medium">copy right &copy;design by tanvir.</p>
+                            <p class="my-fw-normal">copy right &copy;design by tanvir.a <a class="my-text-primary"
+                                    href="#">webiste name</a></p>
                         </div>
                         <div class="right">
-                            <h5>Payments</h5>
+                            <p>Payments</p>
                             <div class="my-mt-2">
                                 <img src="./Static/images/payment.png" alt="payment">
                             </div>
