responsive not ok

--- a/index.html
+++ b/index.html
@@ -1630,6 +1630,22 @@
                                         <a href="./Pages/product.html" class="images">
                                             <img class="display-image" src="./Static/images/product1.jpg" alt="product">
                                             <img class="hide-image" src="./Static/images/product2.jpg" alt="">
+
+                                            <!-- ****  Hide icons  ****-->
+                                            <ul class="hide-icons my-d-flex my-gap-1 ">
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-eye"></i>
+                                                    <div class="show-text">Quick View</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip my-flex-center">
+                                                    <i class="fa-solid fa-code-compare"></i>
+                                                    <div class="show-text">Complare Product</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-heart"></i>
+                                                    <div class="show-text">Add to love list</div>
+                                                </li>
+                                            </ul>
                                         </a>
                                         <div class="base">25%</div>
                                         <div class="base hot">hot</div>
@@ -1680,9 +1696,29 @@
                                         <a href="./Pages/product.html" class="images">
                                             <img class="display-image" src="./Static/images/product1.jpg" alt="product">
                                             <img class="hide-image" src="./Static/images/product2.jpg" alt="">
+
+                                            <!-- ****  Hide icons  ****-->
+                                            <ul class="hide-icons my-d-flex my-gap-1 ">
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-eye"></i>
+                                                    <div class="show-text">Quick View</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip my-flex-center">
+                                                    <i class="fa-solid fa-code-compare"></i>
+                                                    <div class="show-text">Complare Product</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-heart"></i>
+                                                    <div class="show-text">Add to love list</div>
+                                                </li>
+                                            </ul>
                                         </a>
+
+
                                         <div class="base">15%</div>
                                         <div class="base new">new</div>
+
+
                                         <div class="my-mt-2">
                                             <a href="./Pages/product.html" class="name">
                                                 <h4>Organic Almonds</h4>
@@ -1730,7 +1766,25 @@
                                         <a href="./Pages/product.html" class="images">
                                             <img class="display-image" src="./Static/images/product1.jpg" alt="product">
                                             <img class="hide-image" src="./Static/images/product2.jpg" alt="">
+
+                                            <!-- ****  Hide icons  ****-->
+                                            <ul class="hide-icons my-d-flex my-gap-1 ">
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-eye"></i>
+                                                    <div class="show-text">Quick View</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip my-flex-center">
+                                                    <i class="fa-solid fa-code-compare"></i>
+                                                    <div class="show-text">Complare Product</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-heart"></i>
+                                                    <div class="show-text">Add to love list</div>
+                                                </li>
+                                            </ul>
                                         </a>
+
+
                                         <div class="base">5%</div>
                                         <div class="base bestseller">bestseller</div>
                                         <div class="my-mt-2">
@@ -1740,6 +1794,8 @@
                                             <p class="my-mt-0 description">Blend your favorite smoothies anywhere with
                                                 this portable blender.</p>
                                         </div>
+
+
                                         <div class="rating my-mt-4 my-align-center my-w-100 my-d-flex my-gap-2">
                                             <a href="#" class="stars">
                                                 <i class="fa-solid fa-star"></i>
@@ -1780,9 +1836,30 @@
                                         <a href="./Pages/product.html" class="images">
                                             <img class="display-image" src="./Static/images/product1.jpg" alt="product">
                                             <img class="hide-image" src="./Static/images/product2.jpg" alt="">
+
+
+                                            <!-- ****  Hide icons  ****-->
+                                            <ul class="hide-icons my-d-flex my-gap-1 ">
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-eye"></i>
+                                                    <div class="show-text">Quick View</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip my-flex-center">
+                                                    <i class="fa-solid fa-code-compare"></i>
+                                                    <div class="show-text">Complare Product</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-heart"></i>
+                                                    <div class="show-text">Add to love list</div>
+                                                </li>
+                                            </ul>
                                         </a>
+
+
                                         <div class="base">12%</div>
                                         <div class="base new">new</div>
+
+
                                         <div class="my-mt-2">
                                             <a href="./Pages/product.html" class="name">
                                                 <h4>Gaming Mouse</h4>
@@ -1790,6 +1867,8 @@
                                             <p class="my-mt-0 description">Experience seamless gaming with this
                                                 high-performance mouse.</p>
                                         </div>
+
+
                                         <div class="rating my-mt-4 my-align-center my-w-100 my-d-flex my-gap-2">
                                             <a href="#" class="stars">
                                                 <i class="fa-solid fa-star"></i>
@@ -1803,6 +1882,8 @@
                                                 <div class="total-raging my-fs-xs">(67)</div>
                                             </div>
                                         </div>
+
+
                                         <div class="price my-mt-2 my-d-flex my-align-end my-gap-2">
                                             <h4 class="new-price my-fw-bolder">
                                                 <i class="fa-solid fa-bangladeshi-taka-sign"></i><span>1,500.00</span>
@@ -1811,6 +1892,8 @@
                                                 <i class="fa-solid fa-bangladeshi-taka-sign"></i><span>1,700.00</span>
                                             </del>
                                         </div>
+
+
                                         <div class="sold-available my-mt-4">
                                             <div class="sold uppercase my-flex-between">
                                                 <span class="my-fs-xs">Already sold: <strong>100</strong></span>
@@ -1825,21 +1908,46 @@
                                         </div>
                                     </div>
 
+
+
                                     <!--********  Single Product  ********-->
                                     <div class="my-card product-cart">
                                         <a href="./Pages/product.html" class="images">
                                             <img class="display-image" src="./Static/images/product1.jpg" alt="product">
                                             <img class="hide-image" src="./Static/images/product2.jpg" alt="">
+
+                                            <!-- ****  Hide icons  ****-->
+                                            <ul class="hide-icons my-d-flex my-gap-1 ">
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-eye"></i>
+                                                    <div class="show-text">Quick View</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip my-flex-center">
+                                                    <i class="fa-solid fa-code-compare"></i>
+                                                    <div class="show-text">Complare Product</div>
+                                                </li>
+                                                <li class="hide-icon my-tooltip  my-flex-center">
+                                                    <i class="fa-regular fa-heart"></i>
+                                                    <div class="show-text">Add to love list</div>
+                                                </li>
+                                            </ul>
                                         </a>
+
+
                                         <div class="base">25%</div>
                                         <div class="base hot">hot</div>
                                         <div class="my-mt-2">
+
+
                                             <a href="./Pages/product.html" class="name">
                                                 <h4>Premium Dark Chocolate</h4>
                                             </a>
                                             <p class="my-mt-0 description">Rich and creamy dark chocolate, perfect for
                                                 indulgence.</p>
                                         </div>
+
+
+
                                         <div class="rating my-mt-4 my-align-center my-w-100 my-d-flex my-gap-2">
                                             <a href="#" class="stars">
                                                 <i class="fa-solid fa-star"></i>
@@ -1853,6 +1961,8 @@
                                                 <div class="total-raging my-fs-xs">(50)</div>
                                             </div>
                                         </div>
+
+
                                         <div class="price my-mt-2 my-d-flex my-align-end my-gap-2">
                                             <h4 class="new-price my-fw-bolder">
                                                 <i class="fa-solid fa-bangladeshi-taka-sign"></i><span>450.00</span>
@@ -1861,6 +1971,7 @@
                                                 <i class="fa-solid fa-bangladeshi-taka-sign"></i><span>600.00</span>
                                             </del>
                                         </div>
+
                                         <div class="sold-available my-mt-4">
                                             <div class="sold uppercase my-flex-between">
                                                 <span class="my-fs-xs">Already sold: <strong>10</strong></span>
