--- a/index.html
+++ b/index.html
@@ -2424,6 +2424,183 @@
 
 
 
+
+            <!--**************  Our Blog Section  ************* -->
+            <section class="section-margin">
+                <div class="my-container">
+
+                    <!-- head -->
+                    <div class="section-head">
+                        <h2>Our Latest Blog & News</h2>
+                        <p>Read our Blog</p>
+                    </div>
+
+                    <!-- blog area -->
+                    <div class="blog-area my-grid-2 my-mt-6 my-grid-sm-1 my-gap-8">
+                        <!-- left side -->
+                        <div class="left my-card">
+                            <div>
+                                <img src="./Static/images/food_01.jpg" alt="">
+                            </div>
+                            <div>
+                                <a href="#">
+                                    <h3 class="my-mt-4">All City Cafes And Restaurants Switched To Delivery Mode</h3>
+                                </a>
+                                <p class="my-mt-6">Nam facilisis id metus non mollis. Curabitur euismod in augue eu
+                                    efficitur. Etiam
+                                    imperdiet pretium nulla quis egestas.
+                                    Aliquam ac bibendum erat, sed fermentum urna. Pellentesque vel dictum libero.
+                                </p>
+                            </div>
+
+                            <!-- Blog footer -->
+                            <div class="blog-footer my-flex-between my-gap-4 my-mt-6">
+                                <div class="date my-d-flex my-gap-3 my-align-center">
+                                    <span><i class="fa-solid fa-calendar-days"></i></span>
+                                    <p>22 Dec 2024</p>
+                                </div>
+
+                                <div class="comment my-d-flex my-gap-3">
+                                    <span><i class="fa-regular fa-comment"></i>102</span>
+                                    <span><i class="fa-solid fa-eye"></i>0</span>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!-- right side -->
+                        <div class="right my-flex-column my-gap-4">
+
+                            <!-- single blog -->
+                            <div class=" my-card my-d-flex my-align-center my-gap-8">
+                                <div>
+                                    <img src="./Static/images/food_01.jpg" alt="">
+                                </div>
+
+                                <div class="">
+                                    <div>
+                                        <a href="#">
+                                            <h4 class="my-mt-4">All City Cafes And Restaurants Switched To Delivery Mode
+                                            </h4>
+                                        </a>
+                                    </div>
+
+                                    <!-- Blog footer -->
+                                    <div class="blog-footer my-flex-between my-gap-4 my-mt-6">
+                                        <div class="date my-d-flex my-gap-3 my-align-center">
+                                            <span><i class="fa-solid fa-calendar-days"></i></span>
+                                            <p>22 Dec 2024</p>
+                                        </div>
+
+                                        <div class="comment my-d-flex my-gap-3">
+                                            <span><i class="fa-regular fa-comment"></i>122</span>
+                                            <span><i class="fa-solid fa-eye"></i>3</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <!-- single blog -->
+                            <div class=" my-card my-d-flex my-align-center my-gap-8">
+                                <div>
+                                    <img src="./Static/images/food_02.jpg" alt="">
+                                </div>
+
+                                <div class="">
+                                    <div>
+                                        <a href="#">
+                                            <h4 class="my-mt-4">All City Cafes And Restaurants Switched To Delivery Mode
+                                            </h4>
+                                        </a>
+                                    </div>
+
+                                    <!-- Blog footer -->
+                                    <div class="blog-footer my-flex-between my-gap-4 my-mt-6">
+                                        <div class="date my-d-flex my-gap-3 my-align-center">
+                                            <span><i class="fa-solid fa-calendar-days"></i></span>
+                                            <p>22 Dec 2024</p>
+                                        </div>
+
+                                        <div class="comment my-d-flex my-gap-3">
+                                            <span><i class="fa-regular fa-comment"></i>122</span>
+                                            <span><i class="fa-solid fa-eye"></i>3</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <!-- single blog -->
+                            <div class=" my-card my-d-flex my-align-center my-gap-8">
+                                <div>
+                                    <img src="./Static/images/food_04.jpg" alt="">
+                                </div>
+
+                                <div class="">
+                                    <div>
+                                        <a href="#">
+                                            <h4 class="my-mt-4">All City Cafes And Restaurants Switched To Delivery Mode
+                                            </h4>
+                                        </a>
+                                    </div>
+
+                                    <!-- Blog footer -->
+                                    <div class="blog-footer my-flex-between my-gap-4 my-mt-6">
+                                        <div class="date my-d-flex my-gap-3 my-align-center">
+                                            <span><i class="fa-solid fa-calendar-days"></i></span>
+                                            <p>22 Dec 2024</p>
+                                        </div>
+
+                                        <div class="comment my-d-flex my-gap-3">
+                                            <span><i class="fa-regular fa-comment"></i>122</span>
+                                            <span><i class="fa-solid fa-eye"></i>3</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <!-- single blog -->
+                            <div class=" my-card my-d-flex my-align-center my-gap-8">
+                                <div>
+                                    <img src="./Static/images/food_05.jpg" alt="">
+                                </div>
+
+                                <div class="">
+                                    <div>
+                                        <a href="#">
+                                            <h4 class="my-mt-4">All City Cafes And Restaurants Switched To Delivery Mode
+                                            </h4>
+                                        </a>
+                                    </div>
+
+                                    <!-- Blog footer -->
+                                    <div class="blog-footer my-flex-between my-gap-4 my-mt-6">
+                                        <div class="date my-d-flex my-gap-3 my-align-center">
+                                            <span><i class="fa-solid fa-calendar-days"></i></span>
+                                            <p>22 Dec 2024</p>
+                                        </div>
+
+                                        <div class="comment my-d-flex my-gap-3">
+                                            <span><i class="fa-regular fa-comment"></i>122</span>
+                                            <span><i class="fa-solid fa-eye"></i>3</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
+
+
+
+
+
             <!-- ************************************ -->
             <!--         Brands  Start  Here          -->
             <!-- ************************************ -->
@@ -3703,7 +3880,7 @@
                             </div>
 
                             <div class="my-mt-7 my-text-right">
-                                <p>Don't have account? <button id="register-btn"
+                                <p class="my-fs-sm">Don't have account? <button id="register-btn"
                                         class="my-fw-bold my-text-primary">Register</button>
                                 </p>
 
