home page responsive oK

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
 
                     <!--******  header top for mobile  ******-->
                     <div class="my-d-none header-top-mobile my-py-1 my-w-100 my-d-lg-flex ">
-                        <p class="my-fs-sm"><span class="my-fw-bolder ">Free Shipping</span> for 1000 taka
-                            up.</p>
+                        <div class="area my-flex-between">
+                            <p class="my-fs-sm"><span class="my-fw-bolder ">Free Shipping</span> for 1000 taka
+                                up.</p>
 
-                        <!-- menu icon -->
-                        <button class="menu-icon" id="mobile-menu-icon">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </button>
+                            <!-- menu icon -->
+                            <button class="menu-icon" id="mobile-menu-icon">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </button>
+                        </div>
                     </div>
 
                     <div class="header-top-area my-d-lg-none my-flex-between ">
