mobile responsive issue for header

--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
                     </button>
                 </div>
 
+
                 <div class="my-container">
                     <div class="header-bottom-area my-d-flex my-align-center my-gap-7">
                         <div class="left my-p-relative">
@@ -540,19 +541,123 @@
 
                         <!-- right nav -->
                         <div class="my-flex-between right my-w-100">
-                            <nav class="">
+                            <nav class="my-nav-item">
                                 <ul class="my-d-flex my-gap-4 my-align-center nav-ul">
                                     <!-- single nav -->
-                                    <li> <a class="my-nav-item active" href="#">Home</a> </li>
-                                    <li> <a class="my-nav-item" href="#">About</a> </li>
-                                    <li> <a class="my-nav-item" href="#">Blogs</a> </li>
-                                    <li> <a class="my-nav-item" href="#">Catagoris</a> </li>
-                                    <li>
-                                        <a class="my-nav-item" href="#">Shop</a>
+                                    <li class="my-nav-item active"> <a href="#">Home</a> </li>
+                                    <li class="my-nav-item"> <a href="#">About</a> </li>
+                                    <li class="my-nav-item"> <a href="#">Blogs</a> </li>
+                                    <li class=" my-dropdown-parent mega">
+                                        <a class=" my-d-flex my-align-center my-gap-2" href="#">
+                                            Mega Dropdown
+                                            <span class="my-fs-sm"><i class="fa-solid fa-angle-down"></i></span>
+                                        </a>
+
+                                        <!-- Mega dropdown -->
+                                        <div class="mega-dropdown my-dropdown ">
+
+                                            <div class=" my-grid-4 my-gap-6 my-grid-sm-1 my-grid-md-2">
+                                                <!-- Single Catagories Item -->
+                                                <div class="item ">
+                                                    <div class="categories-title">Electronic</div>
+                                                    <ul>
+                                                        <li><a href="#">Desktop</a></li>
+                                                        <li><a href="#">Laptop</a></li>
+                                                        <li><a href="#">Camera</a></li>
+                                                        <li><a href="#">Table</a></li>
+                                                        <li><a href="#">Headphone</a></li>
+                                                    </ul>
+                                                    <a href="#" class="categories-banner">
+                                                        <img src="./Static/images/product2.jpg" alt="">
+                                                    </a>
+                                                </div>
+
+                                                <!-- Single Catagories Item -->
+                                                <div class="item">
+                                                    <div class="categories-title">Electronic</div>
+                                                    <ul>
+                                                        <li><a href="#">Desktop</a></li>
+                                                        <li><a href="#">Laptop</a></li>
+                                                        <li><a href="#">Camera</a></li>
+                                                        <li><a href="#">Table</a></li>
+                                                        <li><a href="#">Headphone</a></li>
+                                                    </ul>
+                                                    <a href="#" class="categories-banner">
+                                                        <img src="./Static/images/product1.jpg" alt="">
+                                                    </a>
+                                                </div>
+
+                                                <!-- Single Catagories Item -->
+                                                <div class="item ">
+                                                    <div class="categories-title">Men's</div>
+                                                    <ul>
+                                                        <li><a href="#">Formal</a></li>
+                                                        <li><a href="#">Shirt</a></li>
+                                                        <li><a href="#">Glass</a></li>
+                                                        <li><a href="#">Pent</a></li>
+                                                        <li><a href="#">Boxer</a></li>
+                                                    </ul>
+                                                    <a href="#" class="categories-banner">
+                                                        <img src="./Static/images/product3.jpg" alt="">
+                                                    </a>
+                                                </div>
+
+                                                <!-- Single Catagories Item -->
+                                                <div class="item ">
+                                                    <div class="categories-title">Electronic</div>
+                                                    <ul>
+                                                        <li><a href="#">Top</a></li>
+                                                        <li><a href="#">Perfume</a></li>
+                                                        <li><a href="#">Mackup</a></li>
+                                                        <li><a href="#">Table</a></li>
+                                                        <li><a href="#">Headphone</a></li>
+                                                    </ul>
+                                                    <a href="#" class="categories-banner">
+                                                        <img src="./Static/images/product4.jpg" alt="">
+                                                    </a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
                                     </li>
-                                    <li> <a class="my-nav-item" href="#">Hot Offer</a> </li>
-                                    <li> <a class="my-nav-item" href="#">New Products</a> </li>
-                                    <li> <a class="my-nav-item" href="#">Contact</a> </li>
+                                    <li class=" my-dropdown-parent">
+                                        <a href="#">Pages
+                                            <span><i class="fa-solid fa-angle-down"></i></span>
+                                        </a>
+
+
+                                        <!-- dropdwon -->
+                                        <ul class="my-dropdown">
+                                            <li>
+                                                <a href="#">invoice</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Product page</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Wishlist</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Checkout</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">invoice</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Product page</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Wishlist</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Checkout</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="my-nav-item"> <a href="#">Hot Offer</a> </li>
+                                    <li class="my-nav-item"> <a href="#">New Products</a> </li>
+                                    <li class="my-nav-item"> <a href="#">Contact</a> </li>
                                 </ul>
                             </nav>
 
